# boxup

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  plan.md
.github/workflows/: ci.yml
docs/: RESTORE.md
examples/: desktop.toml  ubuntu-docker-vps.toml
packaging/arch/: PKGBUILD  boxup.install
packaging/debian/: build-deb.sh
packaging/debian/debian/: changelog  control  copyright  postrm  prerm  rules
packaging/polkit/: org.boxup.policy
packaging/systemd/: boxup-backup-desktop@.timer  boxup-backup-due@.service  boxup-backup-now@.service  boxup-backup-server@.timer  boxup-check@.service  boxup-check@.timer  boxup-maintenance@.service  boxup-maintenance@.timer
scripts/: bootstrap.sh  check-rust-version.sh  make-source-archive.sh  prepare-arch-package.sh  setup-profile.sh  vendor-dependencies.sh  vendor-linux-dependencies.py  verify-packaging.sh  verify-source-archive.sh  verify-units.sh
src/: backend.rs  borg.rs  config.rs  domain.rs  index.rs  jobs.rs  lib.rs  restore.rs  tui.rs
tests/: docker_workflow.rs  fake_borg.rs
tests/fixtures/: archive-list.jsonl  create.json  diff.jsonl  repository-list.json
